FairGig-Hackathon/certificate-service/logs/certificate-error.log
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
  File "C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE", line 1
    MZ\ufffd
      ^
SyntaxError: Non-UTF-8 code starting with '\x90' in file C:\USERS\OK\DESKTOP\COMPETITION\FAIRGIG-HACKATHON\FAIRGIG-PYTHON\VENV\SCRIPTS\PYTHON.EXE on line 1, but no encoding declared; see https://peps.python.org/pep-0263/ for details
